bug fixed footer align

--- a/public/css/app_.css
+++ b/public/css/app_.css
@@ -26,14 +26,23 @@
     width: 0px;
 }
 
+main {
+ min-height: 80vh;
+}
+
 /*footer*/
 #footer {
+    min-height: 20vh;
+    text-align: center;
+    padding-bottom: 1.2rem;
     background: #4f4e4e;
     padding-top: 3rem;
-    padding-bottom: 20px;
-    position: absolute;
+    /*position: absolute;*/
+    /*left: 0;*/
+    /*right: 0;*/
     /*bottom: 0;*/
     width: 100%;
+    z-index: -1;
 }
 
 #footer a {
